adicionando a funcionalidade apagar

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <main>
         <h1>Lista de Tarefas</h1>
         <input type="text" id="nomeAcao" placeholder="Digite uma tarefa...">
-        <button>Adicionar</button>
+        <button class="adicionar">Adicionar</button>
         <ul class="tarefas">
-
+            
         </ul>
     </main>
     <script src="script.js"></script>
